[package]
name = "stream-backup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stream-backup"
path = "main.rs"

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
dirs = "5.0.1"
hostname = "0.4.0"
num_cpus = "1.16.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ssh2 = "0.9.4"
